<resources>
    <string name="app_name">bilim</string>
    <string name="logo_name">Bilim</string>
    <string name="app_slogan">Bіlіmdіge dúnıe jaryq</string>
    <string name="sign_in_text">Sign in</string>
    <string name="login_hint_text">Email</string>
    <string name="password_text">Password</string>
    <string name="enter_button_text">Enter</string>
    <string name="new_user_text">I am new user.</string>
    <string name="new_user_register_text">I am new user. Registration</string>
    <string name="registration_text">Registration</string>
    <string name="forgot_password_text">Forgot password?</string>
    <string name="full_name_registration_text">Full Name</string>
    <string name="age_registration_text">Age</string>
    <string name="email_registration_text">Email</string>
    <string name="register_button_text">Register</string>
    <string name="full_name_empty_error_text">Full name is required!</string>
    <string name="age_empty_error_text">Age is required!</string>
    <string name="email_empty_error_text">Email is required!</string>
    <string name="invalid_email_error_text">Please provide valid email!</string>
    <string name="password_empty_error_text">Password is required!</string>
    <string name="password_error_text">Min password length should be 8 characters and must have characters!</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="successfully_created_user_text">Successfully created user</string>
    <string name="failed_to_create_user_text">Failed to create user</string>
    <string name="failed_to_login_text">Failed to login! Please check your credentials</string>
    <string name="verify_email_text">Check your email to verify account!</string>
    <string name="user_forgot_password_text">Please specify the email address specified during registration</string>
    <string name="reset_password">Reset Password</string>
    <string name="reset_password_error_text">Try again! Something wrong happened!</string>
    <string name="reset_password_text">Check your email to reset your password!</string>
    <string name="courses_text">Courses</string>
    <string name="search_text">What are you looking for?</string>
    <string name="search_error_text">Please write what you are looking for</string>
    <string name="user_name">Welcome %1s</string>
    <string name="error_pdf_url">Problem with internet connection</string>
    <string name="teacher_text">Teacher</string>
    <string name="student_text">Student</string>
    <string name="i_agree_text">I agree</string>
    <string name="consent_to_the_collection_personal_data">Consent to the collection and processing of personal data</string>
    <string name="video_verification_text">Pass video verification</string>
    <string name="no_course_text">it is still quiet here</string>
    <string name="create_course_text">Create Course</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="favorite_course_text">Favorite Course</string>
    <string name="home_text">Home</string>
    <string-array name="lesson_type">
        <item>lecture</item>
        <item>video</item>
        <item>test</item>
    </string-array>
</resources>