<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/orange_bg"
    android:orientation="vertical"
    tools:context=".forgot_password.UserForgotPasswordActivity"
    >

    <Toolbar
        android:id="@+id/activity_user_forgot_password_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/orange_bg"
        android:navigationIcon="@drawable/ic_arrow_back_left_bold_copy_white"
        tools:targetApi="lollipop"
        ></Toolbar>

    <TextView
        android:id="@+id/activity_user_forgot_password_logo_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="top|center"
        android:layout_marginTop="@dimen/margin_28"
        android:layout_marginBottom="-55dp"
        android:fontFamily="@font/rage"
        android:text="@string/logo_name"
        android:textColor="@color/white"
        android:textSize="@dimen/logo_text_size"
        />

    <TextView
        android:id="@+id/activity_user_forgot_password_slogan_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="top|center"
        android:letterSpacing="0.5"
        android:text="@string/app_slogan"
        android:textColor="@color/white"
        android:textSize="@dimen/slogan_text_size"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_32"
        android:layout_marginTop="@dimen/margin_24"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/user_forgot_password_text"
        android:textAlignment="center"
        android:textSize="@dimen/text_size_24"
        />

    <EditText
        android:id="@+id/activity_user_forgot_password_email_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_horizontal_36"
        android:layout_marginTop="@dimen/margin_10"
        android:autofillHints="@string/email_registration_text"
        android:background="@drawable/bg_edit_text"
        android:hint="@string/email_registration_text"
        android:inputType="textEmailAddress"
        android:padding="@dimen/padding_20"
        android:textColor="@color/black"
        android:textColorHint="@color/MDarkGrey"
        android:textSize="@dimen/text_size_16"
        tools:ignore="TextFields"
        />

    <Button
        android:id="@+id/activity_user_forgot_password_reset_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_80"
        android:layout_marginTop="@dimen/margin_8"
        android:layout_marginBottom="@dimen/margin_20"
        android:background="@drawable/bg_sign_in_button_state"
        android:enabled="false"
        android:fontFamily="@font/roboto_medium"
        android:padding="@dimen/padding_8"
        android:text="@string/reset_password"
        android:textColor="@color/white"
        android:textColorHint="@color/MDarkGrey"
        android:textSize="@dimen/text_size_20"
        />

    <ProgressBar
        android:id="@+id/activity_user_forgot_password_progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone"
        />
</LinearLayout>