<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/orange_bg">

    <ImageView
        android:id="@+id/activity_registration_first_image_background_image_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="172dp"
        android:contentDescription="@string/logo_name"
        android:src="@drawable/bg_image_2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.877" />

    <ImageView
        android:id="@+id/activity_registration_second_image_background_image_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="160dp"
        android:contentDescription="@string/logo_name"
        android:src="@drawable/bg_image_1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.283" />

    <TextView
        android:id="@+id/activity_registration_logo_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/rage"
        android:text="@string/logo_name"
        android:textColor="@color/white"
        android:textSize="@dimen/logo_text_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/activity_registration_slogan_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="72dp"
        android:letterSpacing="0.5"
        android:text="@string/app_slogan"
        android:textColor="@color/white"
        android:textSize="@dimen/slogan_text_size"
        app:layout_constraintBottom_toTopOf="@+id/activity_registration_registration_text_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.582"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/activity_registration_registration_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/roboto_medium"
        android:letterSpacing="0.1"
        android:text="@string/registration_text"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_32"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/activity_registration_full_name_edit_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activity_registration_logo_text_view" />

    <EditText
        android:id="@+id/activity_registration_full_name_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_horizontal_36"
        android:autofillHints="@string/full_name_registration_text"
        android:background="@drawable/bg_edit_text"
        android:hint="@string/full_name_registration_text"
        android:inputType="text"
        android:padding="@dimen/padding_20"
        android:textColor="@color/black"
        android:textColorHint="@color/MDarkGrey"
        android:textSize="@dimen/text_size_16"
        app:layout_constraintBottom_toTopOf="@+id/activity_registration_age_edit_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activity_registration_registration_text_view" />

    <EditText
        android:id="@+id/activity_registration_age_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_horizontal_36"
        android:autofillHints="@string/age_registration_text"
        android:background="@drawable/bg_edit_text"
        android:hint="@string/age_registration_text"
        android:inputType="number"
        android:padding="@dimen/padding_20"
        android:textColor="@color/black"
        android:textColorHint="@color/MDarkGrey"
        android:textSize="@dimen/text_size_16"
        app:layout_constraintBottom_toTopOf="@+id/activity_registration_email_edit_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activity_registration_full_name_edit_text" />

    <EditText
        android:id="@+id/activity_registration_email_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_horizontal_36"
        android:autofillHints="@string/email_registration_text"
        android:background="@drawable/bg_edit_text"
        android:hint="@string/email_registration_text"
        android:inputType="textEmailAddress"
        android:padding="@dimen/padding_20"
        android:textColor="@color/black"
        android:textColorHint="@color/MDarkGrey"
        android:textSize="@dimen/text_size_16"
        app:layout_constraintBottom_toTopOf="@+id/activity_registration_password_edit_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activity_registration_age_edit_text" />

    <EditText
        android:id="@+id/activity_registration_password_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_horizontal_36"
        android:autofillHints="@string/password_text"
        android:background="@drawable/bg_edit_text"
        android:hint="@string/password_text"
        android:inputType="textPassword"
        android:padding="@dimen/padding_20"
        android:textColor="@color/black"
        android:textColorHint="@color/MDarkGrey"
        android:textSize="@dimen/text_size_16"
        app:layout_constraintBottom_toTopOf="@+id/activity_registration_register_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.569"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activity_registration_email_edit_text"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/activity_registration_register_agreement_description_text_view"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginHorizontal="@dimen/margin_horizontal_36"
        android:layout_marginTop="@dimen/margin_8"
        android:background="@drawable/bg_round_button"
        android:ellipsize="end"
        android:gravity="center"
        android:text="@string/consent_to_the_collection_personal_data"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_12"
        android:visibility="gone"
        app:drawableTint="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/activity_registration_register_agreement_switch"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activity_registration_password_edit_text" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/activity_registration_register_agreement_switch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_horizontal_36"
        android:gravity="center|end"
        android:text="@string/i_agree_text"
        android:textColor="@color/white"
        android:textSize="14sp"
        android:textStyle="bold"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/activity_registration_register_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activity_registration_register_agreement_description_text_view"
        app:switchPadding="@dimen/padding_16"
        tools:ignore="RtlCompat" />

    <androidx.appcompat.widget.AppCompatCheckBox
        android:id="@+id/activity_registration_register_student_check_box"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/margin_10"
        android:button="@drawable/checkbox_custom"
        android:text="@string/student_text"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/activity_registration_register_button"
        app:layout_constraintEnd_toStartOf="@+id/activity_registration_register_teacher_check_box"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activity_registration_register_agreement_switch" />

    <androidx.appcompat.widget.AppCompatCheckBox
        android:id="@+id/activity_registration_register_teacher_check_box"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/margin_16"
        android:button="@drawable/checkbox_custom"
        android:text="@string/teacher_text"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/activity_registration_register_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/activity_registration_register_student_check_box"
        app:layout_constraintTop_toBottomOf="@+id/activity_registration_register_agreement_switch" />

    <Button
        android:id="@+id/activity_registration_register_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_80"
        android:layout_marginBottom="@dimen/margin_10"
        android:background="@drawable/bg_sign_in_button_state"
        android:enabled="false"
        android:fontFamily="@font/roboto_medium"
        android:padding="@dimen/padding_8"
        android:text="@string/register_button_text"
        android:textColor="@color/white"
        android:textColorHint="@color/MDarkGrey"
        android:textSize="@dimen/text_size_20"
        app:layout_constraintBottom_toTopOf="@+id/activity_registration_user_have_account_text_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activity_registration_register_teacher_check_box" />

    <TextView
        android:id="@+id/activity_registration_user_have_account_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_10"
        android:text="@string/already_have_an_account"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activity_registration_register_button" />

    <ProgressBar
        android:id="@+id/activity_registration_progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>