<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    >

    <ImageView
        android:id="@+id/activity_sign_in_background_image_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_sign_in_registration"
        android:contentDescription="@string/logo_name"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        />

    <ImageView
        android:id="@+id/activity_sign_in_first_image_background_image_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_Image_view_logo_top"
        android:contentDescription="@string/logo_name"
        android:src="@drawable/bg_image_1"
        app:layout_constraintEnd_toStartOf="@+id/activity_sign_in_second_image_background_image_view"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/activity_sign_in_logo_text_view"
        />

    <ImageView
        android:id="@+id/activity_sign_in_second_image_background_image_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/margin_16"
        android:layout_marginBottom="@dimen/margin_image_view_logo_bottom"
        android:contentDescription="@string/logo_name"
        android:src="@drawable/bg_image_2"
        app:layout_constraintBottom_toTopOf="@+id/activity_sign_in_slogan_text_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/activity_sign_in_first_image_background_image_view"
        />

    <TextView
        android:id="@+id/activity_sign_in_logo_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_124"
        android:fontFamily="@font/rage"
        android:text="@string/logo_name"
        android:textColor="@color/white"
        android:textSize="@dimen/logo_text_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/activity_sign_in_background_image_view"
        />

    <TextView
        android:id="@+id/activity_sign_in_slogan_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_130"
        android:letterSpacing="0.5"
        android:text="@string/app_slogan"
        android:textColor="@color/white"
        android:textSize="@dimen/slogan_text_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="@+id/activity_sign_in_background_image_view"
        app:layout_constraintTop_toTopOf="@+id/activity_sign_in_logo_text_view"
        />

    <TextView
        android:id="@+id/activity_sign_in_sign_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_32"
        android:fontFamily="@font/roboto_medium"
        android:letterSpacing="0.1"
        android:text="@string/sign_in_text"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_28"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="@+id/activity_sign_in_background_image_view"
        app:layout_constraintTop_toBottomOf="@+id/activity_sign_in_logo_text_view"
        />

    <EditText
        android:id="@+id/activity_sign_in_login_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_horizontal_36"
        android:layout_marginTop="@dimen/margin_16"
        android:autofillHints="@string/login_hint_text"
        android:background="@drawable/bg_edit_text"
        android:hint="@string/login_hint_text"
        android:inputType="textEmailAddress"
        android:padding="@dimen/padding_16"
        android:textColorHint="@color/MDarkGrey"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size_16"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/activity_sign_in_background_image_view"
        app:layout_constraintTop_toBottomOf="@+id/activity_sign_in_sign_text_view"
        />

    <EditText
        android:id="@+id/activity_sign_in_password_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_horizontal_36"
        android:layout_marginTop="@dimen/margin_16"
        android:autofillHints="@string/password_text"
        android:background="@drawable/bg_edit_text"
        android:hint="@string/password_text"
        android:inputType="textPassword"
        android:padding="@dimen/padding_16"
        android:textColorHint="@color/MDarkGrey"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size_16"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/activity_sign_in_background_image_view"
        app:layout_constraintTop_toBottomOf="@+id/activity_sign_in_login_edit_text"
        />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_8"
        android:text="@string/forgot_password_text"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/activity_sign_in_sign_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.483"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activity_sign_in_password_edit_text"
        app:layout_constraintVertical_bias="0.125"
        />

    <Button
        android:id="@+id/activity_sign_in_sign_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_horizontal_50"
        android:background="@drawable/bg_sign_in_button_state"
        android:enabled="false"
        android:fontFamily="@font/roboto_medium"
        android:padding="@dimen/padding_16"
        android:text="@string/enter_button_text"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_26"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/activity_sign_in_background_image_view"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/activity_sign_in_background_image_view"
        app:layout_constraintTop_toBottomOf="@+id/activity_sign_in_password_edit_text"
        app:layout_constraintVertical_bias="0.251"
        />

    <TextView
        android:id="@+id/activity_sign_in_new_user_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_48"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/new_user_text"
        android:textColor="@color/MGrey"
        android:textSize="@dimen/text_size_12"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/activity_sign_in_background_image_view"
        app:layout_constraintHorizontal_bias="0.307"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activity_sign_in_sign_button"
        app:layout_constraintVertical_bias="0.619"
        />

    <TextView
        android:id="@+id/activity_sign_in_registration_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_48"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/registration_text"
        android:textColor="@color/MBlue"
        android:textSize="@dimen/text_size_12"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/activity_sign_in_new_user_text_view"
        app:layout_constraintTop_toBottomOf="@+id/activity_sign_in_sign_button"
        app:layout_constraintVertical_bias="0.578"
        />

    <ProgressBar
        android:id="@+id/activity_sign_in_progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />
</androidx.constraintlayout.widget.ConstraintLayout>