<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/orange_bg">

    <LinearLayout
        android:id="@+id/activity_favorite_empty_course_linear"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/activity_favorite_no_course_image_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/astronaut" />

        <TextView
            android:id="@+id/activity_favorite_no_course_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_24"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/no_course_text"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_24" />
    </LinearLayout>

    <Button
        android:id="@+id/activity_favorite_home_button"
        android:layout_width="154dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|bottom"
        android:layout_marginBottom="@dimen/margin_16"
        android:background="@drawable/bg_favorite_button"
        android:drawableStart="@drawable/ic_like_blue"
        android:fontFamily="@font/roboto_medium"
        android:padding="@dimen/padding_8"
        android:text="@string/favorite_course_text"
        android:textAllCaps="false"
        android:textColor="@color/MButtonTextColor"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:id="@+id/activity_favorite_has_course_linear"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="gone">

        <Toolbar
            android:id="@+id/activity_favorite_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/orange_bg"
            android:navigationIcon="@drawable/ic_arrow_back_left_bold_copy_white"
            tools:targetApi="lollipop">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_8"
                android:fontFamily="@font/rage"
                android:text="@string/logo_name"
                android:textSize="@dimen/text_size_34" />
        </Toolbar>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/activity_favorite_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:clipToPadding="false"
            android:overScrollMode="never"
            android:paddingBottom="@dimen/padding_20"
            android:scrollbars="none"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:listitem="@layout/course_item" />
    </LinearLayout>

    <ProgressBar
        android:id="@+id/activity_favorite_progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="invisible" />
</FrameLayout>